# python-sdk

./: pyproject.toml
docs/: quickstart.md  releasing.md
examples/: agent.py  client.py  echo_agent.py  gemini.py
schema/: VERSION  meta.json  schema.json
scripts/: gen_schema.py  gen_signature.py
src/acp/: __init__.py  connection.py  interfaces.py  meta.py  router.py  schema.py  transports.py  utils.py
src/acp/agent/: connection.py  router.py
src/acp/client/: connection.py  router.py
tests/: conftest.py  test_compatibility.py  test_golden.py  test_rpc.py  test_unstable.py  test_utils.py
tests/golden/: initialize_response.json
tests/real_user/: test_connection_oversize_frame.py  test_stdio_limits.py
